@@ -25,6 +25,9 @@ CHANGES
   management API so that integration packages like zope.fanstatic have
   a more explicit way to manage this information.
 
+- Resources check whether the file they refer to exists or not. If
+  the file doesn't exist you get an UnknownResourceError.
+
 0.10.1 (2011-02-06)
 ===================
 
